10_container/02_kind_mesh/manifests/overlays/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: { name: api-gw, namespace: envoy-gw-app }
spec:
  gatewayClassName: envoy
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: gw.example
